# elk-recorder-2

./: .gitignore  README.md
back/: Cargo.toml
back/proto/: elkr.proto
back/src/: audio.rs  cmd_serve.rs  encoder.rs  lib.rs  main.rs  sink.rs
back/src/service/: mod.rs
engine/: Cargo.toml  build.rs  elkr-engine.service
engine/src/: audio.rs  cmd_list.rs  cmd_serve.rs  config.rs  encoder.rs  lib.rs  sink.rs
engine/src/service/: mod.rs
manager/: elkr-manager.service  main.py  pyproject.toml
manager/lib/: __init__.py  dbus.py  manager.py  udisks.py
manager/proto/: elkr_pb2.py  elkr_pb2_grpc.py
scripts/: dist.sh  logs.sh
